Fixing administration header visibility

--- a/files/client/modules/DubasLightTheme/css/espo/light-dubas.css
+++ b/files/client/modules/DubasLightTheme/css/espo/light-dubas.css
@@ -21949,6 +21949,9 @@ tr.list-row:hover {
     background-color: #e8eced;
 }
 
+div#main {
+    margin-top: 5%;
+}
 
 body {
     --theme-name: DubasLightTheme
